--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,9 @@
     <div class="card" routerLinkActive="active"  (click)="navigateTo('d3js')">
       D3 Js
     </div>
-    <div class="card" routerLinkActive="active"  (click)="navigateTo('nodejs')">
+    <!-- <div class="card" routerLinkActive="active"  (click)="navigateTo('nodejs')">
       Node Js
-    </div>
+    </div> -->
     <div class="card" routerLinkActive="active"  (click)="navigateTo('nest')">
       Nest Js
     </div>
